src/objects/PSA_Aggregate_Report_Auto_Calculation__mdt.object
<CustomObject>
    <description>IQVIAPSA-6758, IQVIAPSA-7136</description>
    <fields>
        <fullName>Aggregate_Record_Type__c</fullName>
        <label>Aggregate Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Calculation_in_Field__c</fullName>
        <description>IQVIAPSA-6758</description>
        <label>Auto Calculation in Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculate Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PSA Aggregate Report Auto Calculation</label>
    <pluralLabel>PSA Aggregate Report Auto Calculations</pluralLabel>
</CustomObject>